--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
@@ -7,9 +8,55 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Header></Header>
+		<main>
+		<h1>Velkommen til denne hjemmeside</h1>
+		<div><video src=""></video></div>
+		<div class="grid_1">
+			<img class="forsidebillede" src="billeder/playroom.jpg" alt="">
+			<img class="forsidebillede" src="billeder/playroom.jpg" alt="">
+			<img class="forsidebillede" src="billeder/playroom.jpg" alt="">
+		</div>
+		</main>
 	</body>
 </html>
+
+<style>
+	* {
+  	box-sizing: border-box;
+	}
+	body{
+		background-color: #1E1E1E;
+		margin: 40px;
+	}
+	main{
+		margin: 20px;
+	}
+	h1,
+    h2 {
+      color: white;
+      font-family: "Dosis";
+	  font-size: 3rem;
+    }
+
+    p {
+      font-family: "Open Sans";
+    }
+
+	.grid_1 {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	.forsidebillede{
+		width: 80%;
+	}
+	/*    
+	font-family: 'Dosis', sans-serif;
+    font-family: 'Open Sans', sans-serif;*/
+</style>
