--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,6 +55,9 @@ import Header from "../components/Header.astro";
 	}
 	.forsidebillede{
 		width: 80%;
+		margin: 10px;
+        padding: 10px;
+		position: center;
 	}
 	/*    
 	font-family: 'Dosis', sans-serif;
