--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,8 @@ import Header from "../components/Header.astro";
 		<Header></Header>
 		<main>
 		<h1>Velkommen til denne hjemmeside</h1>
-		<div><video src=""></video></div>
+		<div><video autoplay muted loop id="myVideo"
+			 src="video/"></video></div>
 		<div class="grid_1">
 			<img class="forsidebillede" src="billeder/playroom.jpg" alt="">
 			<img class="forsidebillede" src="billeder/playroom.jpg" alt="">
