--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,10 +23,10 @@ import Header from "../components/Header.astro";
 			<img class="forsidebillede" src="billeder/room3.jpg" alt="">
 		</div>
 		<h2 class="moseoverskrift">Spar 15% næste gang du besøger os hos Royal Escapes.</h2>
-		<p class="mosetekst">Det var midt om natten, og slottet var forladt. Men pludselig hørte man lyden af en morsekode, der blev sendt fra et af vinduerne. En skræmt person turde nærme sig og læste budskabet: "Løs morsekoden og få 15% rabat næste gang du besøger Royal Escapes."
+		<p class="mosetekst">Det var midt om natten, og slottet var forladt. Men pludselig hørte man lyden af en morsekode, der blev sendt fra et af vinduerne. En skræmt person turde nærme sig og læste budskabet: <mark class="citat"> "Løs morsekoden og få 15% rabat næste gang du besøger Royal Escapes." </mark> 
 			Hylder væltede, døre smækkede, og stemmer hviskede fra mørket. Kun de modigste tørrede at tage udfordringen op og løse koden.</p>
 		<img class="mosekodebillede" src="billeder/mosekode1.png" alt="">	
-		<p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os</p>
+		<p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os, for at indløse din rabatkode.</p>
 		</main>
 	</body>
 </html>
@@ -72,6 +72,12 @@ import Header from "../components/Header.astro";
 	}
 	.mosetekst {
 		text-align: center;
+	}
+
+	.citat {
+		font-style: italic;
+		background: none;
+		color: #BF002B;
 	}
 
 	.mosetekstunderbillede{
