--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Header from "../components/Header.astro";
 		<p class="mosetekst">Det var midt om natten, og slottet var forladt. Men pludselig hørte man lyden af en morsekode, der blev sendt fra et af vinduerne. En skræmt person turde nærme sig og læste budskabet: <mark class="citat"> "Løs morsekoden og få 15% rabat næste gang du besøger Royal Escapes." </mark> 
 			Hylder væltede, døre smækkede, og stemmer hviskede fra mørket. Kun de modigste tørrede at tage udfordringen op og løse koden.</p>
 		<img class="mosekodebillede" src="billeder/mosekode1.png" alt="">	
-		<p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os, for at indløse din rabatkode.</p>
+		<p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os for at indløse din rabatkode.</p>
 		</main>
 	</body>
 </html>
