--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,100 +3,106 @@ import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&family=Open+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
-		<title>Astro</title>
-	</head>
-	<body>
-		<Header></Header>
-		<main>
-			<video src="video/royal_escape_site.mp4" autoplay muted loop id="myVideo" ></video>
-		<div class="grid_1">
-			<img class="forsidebillede" src="billeder/room1.jpg" alt="">
-			<img class="forsidebillede" src="billeder/room2.jpg" alt="">
-			<img class="forsidebillede" src="billeder/room3.jpg" alt="">
-		</div>
-		<h2 class="moseoverskrift">Spar 15% næste gang du besøger os hos Royal Escapes.</h2>
-		<p class="mosetekst">Det var midt om natten, og slottet var forladt. Men pludselig hørte man lyden af en morsekode, der blev sendt fra et af vinduerne. En skræmt person turde nærme sig og læste budskabet: <mark class="citat"> "Løs morsekoden og få 15% rabat næste gang du besøger Royal Escapes." </mark> 
-			Hylder væltede, døre smækkede, og stemmer hviskede fra mørket. Kun de modigste tørrede at tage udfordringen op og løse koden.</p>
-		<img class="mosekodebillede" src="billeder/mosekode1.png" alt="">	
-		<p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os for at indløse din rabatkode.</p>
-		</main>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&family=Open+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet" />
+    <title>Astro</title>
+  </head>
+  <body>
+    <Header />
+    <main>
+      <video src="video/royal_escape_site.mp4" autoplay muted loop id="myVideo"></video>
+      <div class="grid_1">
+        <img class="forsidebillede" src="billeder/room1.jpg" alt="" />
+        <img class="forsidebillede" src="billeder/room2.jpg" alt="" />
+        <img class="forsidebillede" src="billeder/room3.jpg" alt="" />
+      </div>
+      <h2 class="moseoverskrift">Spar 15% næste gang du besøger os hos Royal Escapes.</h2>
+      <p class="mosetekst">
+        Det var midt om natten, og slottet var forladt. Men pludselig hørte man lyden af en morsekode, der blev sendt fra et af vinduerne. En skræmt person turde nærme sig og læste budskabet: <mark class="citat">
+          "Løs morsekoden og få 15% rabat næste gang du besøger Royal Escapes."
+        </mark>
+        Hylder væltede, døre smækkede, og stemmer hviskede fra mørket. Kun de modigste tørrede at tage udfordringen op og løse koden.
+      </p>
+      <img class="mosekodebillede" src="billeder/mosekode1.png" alt="" />
+      <p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os, for at indløse din rabatkode.</p>
+      <div>
+        <p>PLADS TIL AT LIGGE KUNDETING IND HER FRA SUPABASE</p>
+      </div>
+    </main>
+  </body>
 </html>
 
 <style>
-	* {
-  	box-sizing: border-box;
-	}
-	body{
-		background-color: black;
-		margin: 40px;
-	}
-	main{
-		margin: 20px;
-	}
-	h1,
-    h2 {
-      color: white;
-      font-family: "Dosis";
-	  font-size: 3rem;
-    }
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    background-color: black;
+    margin: 40px;
+  }
+  main {
+    margin: 20px;
+  }
+  h1,
+  h2 {
+    color: white;
+    font-family: "Dosis";
+    font-size: 3rem;
+  }
 
-    p {
-      font-family: "Open Sans";
-	  color: white;
-	  font-size: 2rem;
-        }
+  p {
+    font-family: "Open Sans";
+    color: white;
+    font-size: 2rem;
+  }
 
-	.grid_1 {
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-	}
-	.forsidebillede{
-		width: 80%;
-		margin: 10px;
-        padding: 10px;
-		position: center;
-	}
+  .grid_1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .forsidebillede {
+    width: 80%;
+    margin: 10px;
+    padding: 10px;
+    position: center;
+  }
 
-	.moseoverskrift{
-		text-align: center;
-		color: #BF002B;
-	}
-	.mosetekst {
-		text-align: center;
-	}
+  .moseoverskrift {
+    text-align: center;
+    color: #bf002b;
+  }
+  .mosetekst {
+    text-align: center;
+  }
 
-	.citat {
-		font-style: italic;
-		background: none;
-		color: #BF002B;
-	}
+  .citat {
+    font-style: italic;
+    background: none;
+    color: #bf002b;
+  }
 
-	.mosetekstunderbillede{
-		text-align: center;
-		font-size: 1.3;
-		font-family: "Open Sans";
-		font-style: italic;
-	}
+  .mosetekstunderbillede {
+    text-align: center;
+    font-size: 1.3;
+    font-family: "Open Sans";
+    font-style: italic;
+  }
 
-	.mosekodebillede{
-		width: 70%;
-		position: center;
-	}
+  .mosekodebillede {
+    width: 70%;
+    position: center;
+  }
 
-	#myVideo {
- 	  width: 100%;
-
-	}
-	/*    
+  #myVideo {
+    width: 100%;
+  }
+  /*    
 	font-family: 'Dosis', sans-serif;
     font-family: 'Open Sans', sans-serif;*/
 </style>
