--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import Header from "../components/Header.astro";
+//import MainLayout from "../layout/MainLayout.astro";
+import Testimonials from "../components/Testimonials.astro";
 ---
 
 <html lang="en">
@@ -34,6 +36,8 @@ import Header from "../components/Header.astro";
       <div>
         <p>PLADS TIL AT LIGGE KUNDETING IND HER FRA SUPABASE</p>
       </div>
+      <Testimonials/>
+
     </main>
   </body>
 </html>
