--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,8 @@ import Header from "../components/Header.astro";
     <Header />
     <main>
       <video src="video/royal_escape_site.mp4" autoplay muted loop id="myVideo"></video>
+	  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="public/pilblod.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
       <div class="grid_1">
         <img class="forsidebillede" src="billeder/room1.jpg" alt="" />
         <img class="forsidebillede" src="billeder/room2.jpg" alt="" />
