--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,12 @@ import Testimonials from "../components/Testimonials.astro";
   <body>
     <Header />
     <main>
-      <video src="video/royal_escape_site.mp4" autoplay muted loop id="myVideo"></video>
-	  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="public/pilblod.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+      <div class="videogrid">
+        <video class="video" src="video/royal_escape_site.mp4" autoplay muted loop id="myVideo"></video>
+        <img class="ramme" src="billeder/nybaggrund.png" alt="" />
+      </div>
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+      <lottie-player src="public/pilblod.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
       <div class="grid_1">
         <img class="forsidebillede" src="billeder/room1.jpg" alt="" />
         <img class="forsidebillede" src="billeder/room2.jpg" alt="" />
@@ -38,8 +41,7 @@ import Testimonials from "../components/Testimonials.astro";
       <div>
         <p>PLADS TIL AT LIGGE KUNDETING IND HER FRA SUPABASE</p>
       </div>
-      <Testimonials/>
-
+      <Testimonials />
     </main>
   </body>
 </html>
@@ -107,6 +109,25 @@ import Testimonials from "../components/Testimonials.astro";
 
   #myVideo {
     width: 100%;
+  }
+
+  .videogrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-right: 20rem;
+  }
+
+  .ramme {
+    grid-column: 2 / 4;
+    grid-row: 1;
+    width: 100%;
+    z-index: 1;
+  }
+
+  .video {
+    grid-column: 2 / 4;
+    grid-row: 1;
+    margin-top: 12rem;
   }
   /*    
 	font-family: 'Dosis', sans-serif;
