Animeret element, krone

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,49 +1,50 @@
 <header>
-      <div class="logo">
-        <a href="index.html">
-          <img class="logo_img" src="billeder/logo.png" alt="" />
-        </a>
-      </div>
-      <nav id="menu">
-        <ul class="menu">
-          <li><a href=""> FORSIDE</a></li>
-          <li><a href=""> OM OS</a></li>
-          <li><a href=""> KONTAKT OS</a></li>
-          <li><a href=""> ESCAPE ROOMS</a></li>
-        </ul>
-      </nav>
+  <div class="logo">
+    <a href="index.html">
+      <img class="logo_img" src="billeder/logo.png" alt="" />
+    </a>
+  </div>
+  <nav id="menu">
+    <ul class="menu">
+      <li><a href=""> FORSIDE</a></li>
+      <li><a href=""> OM OS</a></li>
+      <li><a href=""> KONTAKT OS</a></li>
+      <li><a href=""> ESCAPE ROOMS</a></li>
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+      <lottie-player src="public/krone.json" background="transparent" speed="1" style="width: 100px; height: 30px;" loop autoplay></lottie-player>
+    </ul>
+  </nav>
 </header>
 
-  <style>
-    .logo_img {
+<style>
+  .logo_img {
     width: 100%;
     font-size: 3rem;
-    }
-    .logo {
-  width: 100px;
-}
-.menu {
-  display: flex;
-  justify-content: flex-end;
-  list-style: none;
-  gap: 50px;
-  margin: 2px;
-  padding: 1px;
-  font-family: "Dosis", sans-serif;
-}
-.menu a {
-  font-size: 1.5rem;
-  text-decoration: none;
-  font-weight: 700;
-  color: white;
-  font-family: "Dosis", sans-serif;
-}
+  }
+  .logo {
+    width: 100px;
+  }
+  .menu {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    gap: 50px;
+    margin: 2px;
+    padding: 1px;
+    font-family: "Dosis", sans-serif;
+  }
+  .menu a {
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-weight: 700;
+    color: white;
+    font-family: "Dosis", sans-serif;
+  }
   header {
-  padding: 1rem 1.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: "Dosis", sans-serif;
-}
-
-  </style>
+    padding: 1rem 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: "Dosis", sans-serif;
+  }
+</style>
