--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,11 +105,13 @@ import Testimonials from "../components/Testimonials.astro";
     text-align: center;
     color: #bf002b;
     margin: 5%;
+    font-size: 2rem;
   }
   .mosetekst {
     text-align: center;
     margin: 5%;
     line-height: 2;
+    font-size: 1.5rem;
   }
 
   .citat {
@@ -120,7 +122,7 @@ import Testimonials from "../components/Testimonials.astro";
 
   .mosetekstunderbillede {
     text-align: center;
-    font-size: 1.3;
+    font-size: 1rem;
     font-family: "Open Sans";
     font-style: italic;
   }
@@ -129,7 +131,7 @@ import Testimonials from "../components/Testimonials.astro";
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 60%;
   }
 
   #myVideo {
