--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,22 +20,22 @@ import Testimonials from "../components/Testimonials.astro";
     <main>
       <div class="videogrid">
         <video class="video" src="video/royal_escape_site.mp4" autoplay muted loop id="myVideo"></video>
-        <img class="ramme" src="billeder/nybaggrund.png" alt="" />
+        <img class="ramme" src="billeder/ramme.png" alt="" />
       </div>
       <h1 class="billigste">Københavns billigste og nyeste Escape rooms!</h1>
       <h2 class="lilletekt">
         Vores lokaler er nyistandsat og ligger i hjertet af København.<h2>
           <div class="grid_1">
             <div class="royalcabinet">
-              <img class="forsidebillede" src="billeder/room1.jpg" alt="" />
+              <img class="forsidebillede" src="billeder/room1.png" alt="" />
               <p class="centered1">The Royal Cabinet</p>
             </div>
             <div class="theroyaldungeon">
-              <img class="forsidebillede" src="billeder/room2.jpg" alt="" />
+              <img class="forsidebillede" src="billeder/room2.png" alt="" />
               <p class="centered2">The Royal Dungeon</p>
             </div>
             <div class="theroyalplayroom">
-              <img class="forsidebillede" src="billeder/room3.jpg" alt="" />
+              <img class="forsidebillede" src="billeder/room3.png" alt="" />
               <p class="centered3">The Royal Playroom</p>
             </div>
           </div>
@@ -46,7 +46,7 @@ import Testimonials from "../components/Testimonials.astro";
             </mark>
             Hylder væltede, døre smækkede, og stemmer hviskede fra mørket. Kun de modigste tørrede at tage udfordringen op og løse koden.
           </p>
-          <img class="mosekodebillede" src="billeder/mosekode1.png" alt="" />
+          <img class="mosekodebillede" src="billeder/mosekode.png" alt="" />
           <p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os, for at indløse din rabatkode.</p>
           <div>
             <p>PLADS TIL AT LIGGE KUNDETING IND HER FRA SUPABASE</p>
@@ -82,14 +82,14 @@ import Testimonials from "../components/Testimonials.astro";
         color: white;
         font-family: "Dosis";
         font-size: 1.5rem;
-        margin-left: 150px;
+        margin-left: 200px;
       }
       .grid_1 {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
       }
       .forsidebillede {
-        width: 80%;
+        width: 100%;
         margin: 10px;
         padding: 10px;
         position: center;
@@ -104,7 +104,7 @@ import Testimonials from "../components/Testimonials.astro";
         text-align: center;
         color: white;
         font-family: "Dosis";
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-decoration: underline;
       }
 
