--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,10 +6,7 @@
   </div>
   <nav id="menu">
     <ul class="menu">
-      <li><a href=""> FORSIDE</a></li>
-      <li><a href=""> OM OS</a></li>
-      <li><a href=""> KONTAKT OS</a></li>
-      <li><a href=""> ESCAPE ROOMS</a></li>
+      <li><a href=""> GÅ TIL HJEMMESIDE</a></li>
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player src="public/krone.json" background="transparent" speed="1" style="width: 100px; height: 30px;" loop autoplay></lottie-player>
     </ul>
@@ -35,10 +32,12 @@
   }
   .menu a {
     font-size: 1.2rem;
-    text-decoration: none;
     font-weight: 700;
     color: white;
     font-family: "Dosis", sans-serif;
+    border-style: solid;
+    border-width: 2px;
+    text-decoration: none;
   }
   header {
     padding: 1rem 1.5rem;
