--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -155,7 +155,7 @@ import Testimonials from "../components/Testimonials.astro";
       .videogrid {
         display: grid;
         /* grid-template-columns: repeat(3, 1fr); */
-        margin-right: 20rem;
+        position: center;
       }
 
       .ramme {
