--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,18 @@ import Testimonials from "../components/Testimonials.astro";
       <div>
         <p>PLADS TIL AT LIGGE KUNDETING IND HER FRA SUPABASE</p>
       </div>
+      <div class="grid_1-1-1">
+        <div class="instagram"></div>
+        <div class="facebook">
+          <img class="facebookbillede" src="billeder/facebook.png" alt="" />
+          <img class="instagrambillede" src="billeder/instagram.png" alt="" />
+          <img class="youtubebillede" src="billeder/youtube2.png" alt="" />
+          <img class="tiktokbillede" src="billeder/tiktok.png" alt="" />
+        </div>
+        <div class="tiktok"></div>
+        <div class="youtube"></div>
+        <p class="royaltekst">© 2023 Royal Escape Room</p>
+      </div>
       <Testimonials />
     </main>
   </body>
@@ -159,6 +171,37 @@ import Testimonials from "../components/Testimonials.astro";
     font-family: "Open Sans";
     color: white;
     font-size: 2rem;
+  }
+
+  .grid_1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    margin: 20px;
+    padding: 20px;
+  }
+  .instagrambillede {
+    width: 5%;
+    margin: 20px;
+  }
+
+  .facebookbillede {
+    width: 3%;
+    margin: 20px;
+  }
+
+  .tiktokbillede {
+    width: 5%;
+    margin: 20px;
+  }
+
+  .youtubebillede {
+    width: 7%;
+    margin: 20px;
+  }
+
+  .royaltekst {
+    font-size: small;
   }
   /*    
 	font-family: 'Dosis', sans-serif;
