--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,6 +54,14 @@ import Testimonials from "../components/Testimonials.astro";
           <Testimonials />
         </h2>
       </h2>
+      <div class="grid_1-1-1">
+        <div class="samlet">
+          <img class="instagrambillede" src="billeder/instagram.png" alt="" />
+          <img class="facebookbillede" src="billeder/facebook.png" alt="" />
+          <img class="tiktokbillede" src="billeder/tiktok.png" alt="" />
+          <img class="youtubebillede" src="billeder/youtube2.png" alt="" />
+        </div>
+      </div>
     </main>
 
     <style>
@@ -178,10 +186,8 @@ import Testimonials from "../components/Testimonials.astro";
 
       .grid_1-1-1 {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         text-align: center;
-        margin: 20px;
-        padding: 20px;
       }
       .instagrambillede {
         width: 5%;
