--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Header from "../components/Header.astro";
 //import MainLayout from "../layout/MainLayout.astro";
 import Testimonials from "../components/Testimonials.astro";
+import AddTestimonial from "../components/AddTestimonial.astro"
 ---
 
 <html lang="en">
@@ -49,9 +50,18 @@ import Testimonials from "../components/Testimonials.astro";
           <img class="mosekodebillede" src="billeder/mosekode.png" alt="" />
           <p class="mosetekstunderbillede">Fortæl os koden i døren næste gang du besøger os, for at indløse din rabatkode.</p>
           <div>
-            <p>PLADS TIL AT LIGGE KUNDETING IND HER FRA SUPABASE</p>
+            <h2>Det har vores elskede kunder fortalt om os</h2>
           </div>
-          <Testimonials />
+          <section class="grid_testimonial">
+            <div>
+              <AddTestimonial/>
+            </div>
+            <div>
+              <Testimonials />
+            </div>
+          </section>
+          
+     
         </h2>
       </h2>
       <div class="grid_1-1-1">
@@ -217,6 +227,13 @@ import Testimonials from "../components/Testimonials.astro";
         color: white;
         font-size: 1rem;
       }
+
+      .grid_testimonial{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        color: white;
+      }
+
     </style>
   </body>
 </html>
