--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,9 +6,9 @@
   </div>
   <nav id="menu">
     <ul class="menu">
-      <li><a href=""> GÅ TIL HJEMMESIDE</a></li>
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player src="public/krone.json" background="transparent" speed="1" style="width: 100px; height: 30px;" loop autoplay></lottie-player>
+      <li><a href=""> GÅ TIL HJEMMESIDE</a></li>
     </ul>
   </nav>
 </header>
@@ -22,16 +22,18 @@
     width: 100px;
   }
   .menu {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: flex-end;
     list-style: none;
-    gap: 50px;
+    gap: 20px;
     margin: 2px;
     padding: 1px;
     font-family: "Dosis", sans-serif;
   }
   .menu a {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 700;
     color: white;
     font-family: "Dosis", sans-serif;
