--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -48,4 +48,10 @@
     align-items: center;
     font-family: "Dosis", sans-serif;
   }
+
+  @media (max-width: 750px) {
+    .menu a {
+      font-size: 1rem;
+    }
+  }
 </style>
