--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -134,6 +134,8 @@ import AddTestimonial from "../components/AddTestimonial.astro";
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+    font-family: "Open Sans";
+    font-size: 2rem;
   }
 
   .royalcabinet:hover .forsidebillede {
