--- a/src/pages/addTestimonialFeedback.astro
+++ b/src/pages/addTestimonialFeedback.astro
@@ -4,8 +4,8 @@ import LinkButton from "../components/LinkButton.astro"
 ---
 
 <MainLayout >
-    <h1>Tak for testimonial</h1>
-  <p>Tak for dit bidrag. Det bliver vist på siden når det er godkendt</p>
+    <h1>Tak for din feedback</h1>
+  <p>Det bliver vist på siden når det er godkendt</p>
 
 </MainLayout>
 
