--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -13,6 +13,6 @@ function getFirstNChars(str, length) {
 
   <p>
     {getFirstNChars(data.description, 20)}...
-    <a href={"testimonials/" + data.title + "_" + data.id}> læs mere</a>
+    <a href={"testimonials/" + data.id}> læs mere</a>
   </p>
 </article>
