--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,14 +7,14 @@
   <nav id="menu">
     <ul class="menu">
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-      <lottie-player src="public/krone.json" background="transparent" speed="1" style="width: 100px; height: 30px;" loop autoplay></lottie-player>
+      <lottie-player src="/krone.json" background="transparent" speed="1" style="width: 100px; height: 30px;" loop autoplay></lottie-player>
       <li><a href=""> GÅ TIL HJEMMESIDE</a></li>
     </ul>
   </nav>
 </header>
 
 <style>
-  .logo_img {
+  .logo_img { 
     width: 100%;
     font-size: 3rem;
   }
