--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -290,10 +290,7 @@ import AddTestimonial from "../components/AddTestimonial.astro";
       display: grid;
       grid-template-columns: 1fr;
     }
-    .grid_2 {
-      display: grid;
-      grid-template-columns: 1fr;
-    }
+
     .mosekodebillede {
       width: 100%;
     }
@@ -302,5 +299,34 @@ import AddTestimonial from "../components/AddTestimonial.astro";
       grid-template-columns: 1fr;
       text-align: center;
     }
+ 
+  .middle {
+    display: block;
+    opacity: 1;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    font-family: "Open Sans";
+    font-size: 2rem;
+  }
+  .centered1,
+  .centered2,
+  .centered3 {
+    display: block;
+    background-color: #bf002b;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+
+  .lilletekt {
+    text-align: center;
+    color: white;
+    font-family: "Dosis";
+    font-size: 1.5rem;
+    margin-left: 1px;
+  }
+
+
   }
 </style>
