--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,8 +73,10 @@ import AddTestimonial from "../components/AddTestimonial.astro";
   </body>
   <div class="grid_1-1-1">
     <div class="samlet">
-      <img class="instagrambillede" src="billeder/instagram.png" alt="" />
-      <img class="facebookbillede" src="billeder/facebook.png" alt="" />
+      <a href="https://www.instagram.com/royalescapescph/">
+      <img class="instagrambillede" src="billeder/instagram.png" alt="" /></a>
+      <a href="https://www.facebook.com/royalescapescph">
+      <img class="facebookbillede" src="billeder/facebook.png" alt="" /></a> 
       <img class="tiktokbillede" src="billeder/tiktok.png" alt="" />
       <img class="youtubebillede" src="billeder/youtube2.png" alt="" />
     </div>
